readarr/components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: app
          image: "linuxserver/readarr:develop"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8787
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
            - name: black-library
              mountPath: /black-library
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: black-library
          hostPath:
            path: /media/black-library
            type: Directory
